--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32-release-371'
 }
 
 group 'org.example'
@@ -17,4 +18,5 @@ sourceSets {
 }
 dependencies {
     compile 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
