--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32-release-371'
+     id 'org.jetbrains.kotlin.jvm' version '1.4.32-release-371'
 }
 
 group 'org.example'
@@ -19,4 +19,7 @@ sourceSets {
 dependencies {
     compile 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "io.ktor:ktor-server-core:1.5.3"
+    implementation "io.ktor:ktor-server-netty:1.5.3"
+    implementation "ch.qos.logback:logback-classic:1.2.3"
 }
